# fastapi-product-catalog

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py  schemas.py
app/core/: config.py  database_manager.py
app/routers/: product.py
app/services/: base_service.py  model_service.py
migrations/: env.py
migrations/versions/: 194652b345df_initial_migration.py
tests/: test_product_api.py
