[tool.poetry]
name = "product_catalog"
version = "0.1.0"
description = "Product catalogs"
authors = ["Afsar Gayen <afsar@pitangent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "0.114.2", extras = ["standard"]}
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
PyMySQL = "^1.0"
cryptography = "^43.0.3"
pytest = "^8.3.3"
httpx = "^0.27.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
